--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "moment": "^2.29.4",
     "next": "13.4.5",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.44.3",
     "react-toastify": "^9.1.3",
